--- a/proyecto final/proyecto-final/src/app/components/redesociales/redesociales.component.html
+++ b/proyecto final/proyecto-final/src/app/components/redesociales/redesociales.component.html
@@ -1,1 +1,5 @@
-<p>redesociales works!</p>
+<div>
+    <a href="" img src="../../../assets/instagram.png" alt=""></a>
+    <a href="" img src="../../../assets/linkedin.png" alt=""></a>
+    <a href="" img src="../../../assets/github.png" alt=""></a>
+</div>
