Corrección de errores y realización de html y css básico, terminado.

--- a/proyecto final/proyecto-final/src/app/components/header/header.component.html
+++ b/proyecto final/proyecto-final/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div>
-    <app-logo-AP> </app-logo-AP>
+    <app-logo-ap> </app-logo-ap>
     <app-redesociales></app-redesociales>
     <app-banner></app-banner>
 </div>
