--- a/proyecto final/proyecto-final/src/app/components/header/header.component.html
+++ b/proyecto final/proyecto-final/src/app/components/header/header.component.html
@@ -1,5 +1,4 @@
-<div>
+<div class="row">
     <app-logo-ap> </app-logo-ap>
-    <app-redesociales></app-redesociales>
     <app-banner></app-banner>
 </div>
