--- a/proyecto final/proyecto-final/src/app/components/acerca-de/acerca-de.component.html
+++ b/proyecto final/proyecto-final/src/app/components/acerca-de/acerca-de.component.html
@@ -3,7 +3,7 @@
         <img src="../../../assets/" id="ppicture" class="img-fluid">
     </div>
     <div class="col-xs-12 col-sm-2 col-lg-2"> 
-        <p id="nombre"> Pereyra Wortley Salomé</p>
+        <p id="nombre"> {{persona.nombre}} {{persona.apellido}}</p>
         <p> Full Stack Developer Jr.</p>
     </div>
     <div class="col-xs-12 col-sm-2 col-lg-2"> 
